# alfa-food-server

./: .gitignore  .replit  README.md  manage.py  pyproject.toml  requirements.txt
.../replit/: __replit_disk_meta.json
accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_canteenemployee.py  0003_alter_canteenemployee_table.py  0004_remove_profile_balance_parent_balance.py  0005_administration.py  0006_rename_administration_administrator.py  0007_alter_parent_options_alter_teacher_options.py
alfafood/: asgi.py  settings.py  urls.py  wsgi.py
classes/: admin.py  models.py  serializers.py  services.py  views.py
classes/migrations/: 0001_initial.py  0002_student_grade.py  0003_student_teacher_id.py  0004_alter_student_teacher_id.py  0005_alter_student_teacher_id.py  0006_alter_student_teacher_id.py  0007_attendance.py  0008_alter_attendance_options_attendance_reason_and_more.py  0009_grade_teacher.py  0010_alter_attendance_mark_attendance.py  0011_alter_attendance_reason.py  0012_alter_grade_grade.py  0013_mealtime_grade_shift_alter_grade_grade_and_more.py  0014_grade_meal_time_alter_mealtime_table.py  0015_remove_grade_meal_time_grade_meal_time.py  0016_mealtime_meal_category_alter_grade_meal_time_and_more.py  0017_alter_grade_meal_time.py  0018_attendance_grade_alter_attendance_student.py  0019_alter_attendance_grade.py  (+16 more)
common/: constants.py  models.py  permissions.py  services.py
orders/: admin.py  models.py  permissons.py  serializers.py  services.py  views.py
templates/: homepage.html
(+73 files in other folders)
